name:                vdhl-image
version:             0.1.0.0
synopsis:            Generates a VDHL black and white matrix from an image.

license:             GPL-3
license-file:        LICENSE

author:              Raphael Javaux
maintainer:          raphaeljavaux@gmail.com

build-type:          Simple
cabal-version:       >=1.10

executable vdhl-image
    main-is:             Main.hs

    build-depends:       base           >= 4.8      && < 5
                       , friday         >= 0.2.1    && < 0.3
                       , friday-devil   >= 0.3.2    && < 0.4
                       , text

  ghc-options:          -O2 -Wall

  default-language:    Haskell2010
